force-app/src/objects/TR1__Search_And_Match_UI_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>TR1__Advanced_Search_Date_Options__c</fullName>
        <description>Defines search criteria options used for date fields in Advanced Search.</description>
        <inlineHelpText>Defines search criteria options used for date fields in Advanced Search. Date: equal, not equal to, greater than, less than. Date Range: only criteria added in Advanced Search Date Range field. Dates and Data Range: both options.</inlineHelpText>
        <label>Advanced Search Date Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dates</fullName>
                    <default>true</default>
                    <label>Dates</label>
                </value>
                <value>
                    <fullName>DateRange</fullName>
                    <label>Date Range</label>
                </value>
                <value>
                    <fullName>DatesAndDateRange</fullName>
                    <label>Dates and Date Range</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Advanced_Search_Date_Range_Options__c</fullName>
        <description>Specify available date range values based on MCMB</description>
        <inlineHelpText>Specify API names of values from Advanced Search Date Range field (Resume Search) that should be available for users based on MCMB</inlineHelpText>
        <label>Advanced Search Date Range Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Search_Chips__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The current checkbox is responsible for enabling &apos;Chips&apos; functionality.</description>
        <inlineHelpText>If checked - the chip&apos;s functionality will be enabled. If unchecked - functionality will be disabled.</inlineHelpText>
        <label>Candidate Search Chips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Default_For_Recent_Profession_Search__c</fullName>
        <description>To select the default value for Recency Profession Search Filter (can be selected All, Recent, Most Recent).</description>
        <inlineHelpText>To select the default value for Recency Profession Search Filter (can be selected All, Recent, Most Recent).</inlineHelpText>
        <label>Default For Recent Profession Search</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Recent</fullName>
                </value>
                <value>
                    <fullName>Most Recent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Default_Search_Only_With_User_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow saving the search as the default search only if the country matches the user&apos;s country</description>
        <inlineHelpText>Allow saving the search as the default search only if the country matches the user&apos;s country</inlineHelpText>
        <label>Default Search Only With User Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Default_Searchable_Call_List__c</fullName>
        <description>Specify the Label of the Record Type defined on the Call List object that needs to be defaulted on the SAM Screen.</description>
        <inlineHelpText>Specify the Label of the Record Type defined on the Call List object that needs to be defaulted on the SAM Screen.</inlineHelpText>
        <label>Default Searchable Call List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Default_state_SaveSearch_dialog__c</fullName>
        <description>Default state for &quot;Save Search with Job&quot; dialog</description>
        <inlineHelpText>Default state for &quot;Save Search with Job&quot; dialog</inlineHelpText>
        <label>Default state for Save Search dialog</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Save the job with the search</fullName>
                    <default>true</default>
                    <label>Save the job with the search</label>
                </value>
                <value>
                    <fullName>Save the search without the job</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Detail_Column_Visibility__c</fullName>
        <label>Detail Column Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expanded</fullName>
                    <default>true</default>
                    <label>Expanded</label>
                </value>
                <value>
                    <fullName>Collapsed</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Disabled_suggestion_types__c</fullName>
        <inlineHelpText>The field is designed to identify unwanted types of suggestions. Type values must be written through the separator &apos;;&apos; without spaces and lowercase.
Example: to remove the City and Skill types from the suggestions, enter &apos;city;skill&apos;.
For more information about suggestion types, contact the Textkernel administrator</inlineHelpText>
        <label>Disabled suggestion types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Dist_GE_Threshold__c</fullName>
        <defaultValue>&apos;#4bc076&apos;</defaultValue>
        <description>Color to be displayed on the Map Marker when the distance between the Job and the Candidate&amp;#39;s location is greater or equal to the distance s/he is willing to travel.</description>
        <inlineHelpText>Color to be displayed on the Map Marker when the distance between the Job and the Candidate&amp;#39;s location is greater or equal to the distance s/he is willing to travel.</inlineHelpText>
        <label>Distance Greater or Equals Threshold</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Dist_LT_Threshold__c</fullName>
        <defaultValue>&apos;#ff5722&apos;</defaultValue>
        <description>Color to be displayed on the Map Marker when the distance between the Job and the Candidate&apos;s location is within the distance s/he is willing to travel.</description>
        <inlineHelpText>Color to be displayed on the Map Marker when the distance between the Job and the Candidate&apos;s location is within the distance s/he is willing to travel.</inlineHelpText>
        <label>Distance Less Than Threshold</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Dist_NA__c</fullName>
        <defaultValue>&apos;#808080&apos;</defaultValue>
        <description>Color to be displayed on the Map Marker when the Candidate hasn&apos;t provided a distance that s/he is willing to travel.</description>
        <inlineHelpText>Color to be displayed on the Map Marker when the Candidate hasn&apos;t provided a distance that s/he is willing to travel.</inlineHelpText>
        <label>Distance Not Available</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Duration_config_map__c</fullName>
        <defaultValue>&apos;{&quot;0..1&quot;:&quot;1..11&quot;,&quot;1..11&quot;:&quot;0..1&quot;,&quot;1..3&quot;:&quot;12..35&quot;,&quot;12..35&quot;:&quot;1..3&quot;,&quot;3..5&quot;:&quot;36..59&quot;,&quot;36..59&quot;:&quot;3..5&quot;,&quot;5..10&quot;:&quot;60..119&quot;,&quot;60..119&quot;:&quot;5..10&quot;,&quot;&gt;=10&quot;:&quot;&gt;=120&quot;,&quot;&gt;=120&quot;:&quot;&gt;=10&quot;}&apos;</defaultValue>
        <label>Duration config map</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Additional_Locations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Additional Locations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Advanced_Skills_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Advanced Skills Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Autosearch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Autosearch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Candidate_Popover__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected enables a pop-up component that appears when you hover over the candidate&apos;s name.</description>
        <inlineHelpText>If selected enables a pop-up component that appears when you hover over the candidate&apos;s name.</inlineHelpText>
        <label>Enable Candidate Popover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Clickable_Candidate_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if a Candidate&apos;s Name should be clickable in search results.</description>
        <inlineHelpText>If checked, the Contact page will be opened in a new tab once clicked on the Candidate Name on USAM page.</inlineHelpText>
        <label>Enable Clickable Candidate Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Client_Contact_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable/disable client contact match functionality on the TK Job Search/Job Match/ Client Contact Match</description>
        <label>Enable Client Contact Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Collapsed_Mode_For_Filters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Collapsed Mode For Filters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Complex_Search_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Complex Search Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Job_Type_Sorting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows sorting by Job Type on TK Job Search and Job Match</description>
        <inlineHelpText>Allows sorting by Job Type on TK Job Search and Job Match</inlineHelpText>
        <label>Enable Job Type Sorting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Multiselect_Skills_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Multiselect Skills Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Nice_Should_Must_Have__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls if the Nice / Should / Must Have search option are displayed (Enabled).
If not, the search will behave as the Must Have option is checked.</description>
        <inlineHelpText>Controls if the Nice / Should / Must Have search option are displayed (Enabled).
If not, the search will behave as the Must Have option is checked.</inlineHelpText>
        <label>Enable Nice, Should, Must Have</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Ranking_by_Recent_Professions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To define if the default ranking to the job title recency parameter should be applied.</description>
        <inlineHelpText>Once enabled, those candidates will be returned higher that have a selected job title skill as the last and then those who have it as a recent. Applied only if the Recency: All is selected.</inlineHelpText>
        <label>Enable Ranking by Recent Professions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Recent_Profession_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enabled, the ability to search for Recency Profession will be available for users on USAM.</description>
        <inlineHelpText>If enabled, the ability to search for Recency Profession will be available for users on USAM.</inlineHelpText>
        <label>Enable Recent Profession Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Search_by_Group_of_Professions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Search by Group of Professions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Tag_Cloud__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to disable/enable tag cloud.</description>
        <inlineHelpText>This field is used to disable/enable tag cloud.</inlineHelpText>
        <label>Enable Tag Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_User_Email_In_Advanced_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable/disable additional User&apos;s/Contact&apos;s Email information in SAM advanced search</description>
        <inlineHelpText>Enable/disable additional User&apos;s/Contact&apos;s Email information in SAM advanced search</inlineHelpText>
        <label>Enable Email In Lookup (Advanced search)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__ExcludedColor__c</fullName>
        <label>Excluded Breadcrumbs Color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Excluded_JBA_Statuses__c</fullName>
        <label>Excluded JBA Statuses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Filter_Column_Visibility__c</fullName>
        <label>Filter Column Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expanded</fullName>
                    <default>true</default>
                    <label>Expanded</label>
                </value>
                <value>
                    <fullName>Collapsed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Ignore_Diacritic_Symbols_On_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To ignore the special (diacritic) symbols in autosuggestion results in search bar and facet filters in USAM, the setting should be enabled. Example: the same result will be returned when the user search for &apos;genie electrique&apos; and &apos;génie électrique&apos;</description>
        <inlineHelpText>Ignore diacritic symbols on search for suggestions and skills.</inlineHelpText>
        <label>Ignore Diacritic Symbols On Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Latitude_Field__c</fullName>
        <description>Job or Standard Parent Object Field to be used for Job GeoLocation In SM Map View</description>
        <inlineHelpText>Job or Standard Parent Object Field to be used for Job GeoLocation In SM Map View</inlineHelpText>
        <label>Job Latitude Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Longitude_Field__c</fullName>
        <description>Job or Standard Parent Object Field to be used for Job GeoLocation In SM Map View</description>
        <inlineHelpText>Job or Standard Parent Object Field to be used for Job GeoLocation In SM Map View</inlineHelpText>
        <label>Job Longitude Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Search_Layout__c</fullName>
        <label>Job Search And Match Layout</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Must_Have__c</fullName>
        <defaultValue>&apos;#FF0000&apos;</defaultValue>
        <label>Must Have</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Nice_to_Have__c</fullName>
        <defaultValue>&apos;#808080&apos;</defaultValue>
        <label>Nice to Have</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Pagination_Position__c</fullName>
        <label>Pagination Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Top</fullName>
                    <default>true</default>
                    <label>Top</label>
                </value>
                <value>
                    <fullName>Bottom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Query_Parts_Field_Name_To_Hide__c</fullName>
        <description>List of comma-separated TK score field labels to hide in Breadcrumbs and on Job Match score popover</description>
        <label>Query Parts Field Name To Hide</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Records_Per_Page__c</fullName>
        <description>Configure the number of records displayed on the USAM page.
Default values  - 25, 50, 100, 200, 250</description>
        <inlineHelpText>Configure the number of records displayed on the USAM page.
Default values  - 25, 50, 100, 200, 250</inlineHelpText>
        <label>Records Per Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Scale_By_Master_Skill_Type__c</fullName>
        <description>This setting allows to override scale depending on a Master Skill Type value in the Match Query.</description>
        <inlineHelpText>Specify the Importance of each Master Skill Type in the Match Query. API names of Skill Types should be used. For skills without type (Non-Normalised ) &quot;Other&quot; should be used. Scale values can be set to “STRONGLY_FAVORED”, “FAVORED” or “REQUIRED”. If value is not specified, the value from the Skill Filter JSON Schema setting will be used. Example: 
{
&quot;IT_Skill&quot; : &quot;FAVORED&quot;&quot;,
&quot;Language_Skill&quot; : &quot;STRONGLY_FAVORED&quot;,
&quot;Other&quot; : &quot;FAVORED&quot;
}</inlineHelpText>
        <label>Scale By Master Skill Type</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Search_And_Match_Layout__c</fullName>
        <label>Search And Match Layout</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Searchable_Call_Lists__c</fullName>
        <description>Specify the Labels of the Record Type(s) defined on the Call List object that are searchable in the SAM screen.</description>
        <inlineHelpText>Specify the Labels of the Record Type(s) defined on the Call List object that are searchable in the SAM screen.</inlineHelpText>
        <label>Searchable Call Lists</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Should_Have__c</fullName>
        <defaultValue>&apos;#008000&apos;</defaultValue>
        <label>Should Have</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ShowUnavailableCandidates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Unavailable Candidates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Show_SaveSearchWithJob_dialog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show &quot;Save Search with Job&quot; on the Search and Match save dialog</description>
        <inlineHelpText>Show &quot;Save Search with Job&quot; on the Search and Match save dialog</inlineHelpText>
        <label>Show &quot;Save Search with Job&quot; dialog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Show_only_total_candidates_in_tab_header__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Off (default) - Results pages show &quot;250 of 1232423&quot; in the Candidates tab heading
On - Results page shows total number of candidates only &quot;1232423&quot;</inlineHelpText>
        <label>Show only total candidates in tab header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Skill_Filter_JSON_Schema__c</fullName>
        <label>Skill Filter JSON Schema</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Skill_Type_Mapping__c</fullName>
        <label>Skill Type Mapping</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Skill_Types_Used_In_Match_Queries__c</fullName>
        <description>Comma separated list of skill types API names to be sent to candidate matching engine. Only skills of these types on the Job record will be used to find Candidates.</description>
        <inlineHelpText>Specify API names of Skill Types that are taken into account when matching Jobs to Candidates based on MCMB. Type values must be written through the separator ‘,’. Example: to have only Language and IT Skill types, enter Language_Skill, IT_Skill. If this field is blank, then all Skills types will be taken into account.</inlineHelpText>
        <label>Skill Types Used In Match Queries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SynonymLanguage__c</fullName>
        <description>This field contains the value of the synonym languages separated by the semicolons (e.g. &apos;EN;FR;DE&apos;). And used according to MCMB functionality - for each user can be created different instances of &apos;Search &amp; Match Configuration&apos; mdt with a different set of languages and sequences of them.</description>
        <inlineHelpText>This field contains the set of the synonym languages separated by the semicolons (e.g. &apos;EN;FR;DE&apos;).</inlineHelpText>
        <label>Synonym Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Use_Advanced_Skills_Matching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Advanced Skills Matching</label>
        <type>Checkbox</type>
    </fields>
    <label>Search &amp; Match UI Configuration</label>
    <pluralLabel>Search &amp; Match UI Configurations</pluralLabel>
</CustomObject>